--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Merienda', cursive;
   color: orange;
   text-transform: capitalize;
+  font-weight: 700;
 }
 
 p {
